# barakah-bot

./: Cargo.toml
src/: lib.rs  main.rs  utils.rs
tables/: apikey.sql  channels.sql  person.sql
templates/: channels.html  comments.html  header.html  index.html  videos.html
